# kaggle_assignments

./: LICENSE  Makefile  README.md  pyproject.toml  requirements.txt  setup.py
data/interim/: cleaned_test_data_draft_pred.csv
data/processed/: test_data_labelenc_cleaned.csv  test_data_ohe_cleaned.csv  test_data_ohe_processed.csv
docs/: Makefile  conf.py  index.rst  make.bat
models/at1_model/: finalized_model.sav
models/at1_week2_model/: finalized_week2_lr_model.sav  finalized_week2_model.sav
models/at1_week3_model/: model_Gradi.sav  model_Logis.sav  model_XGBCl.sav
models/at1_week4_model/: model_Berno.sav  model_Gauss.sav  model_Gradi.sav  model_LGBMC.sav  model_Logis.sav  model_Neare.sav  model_Quadr.sav  model_XGBCl.sav  model_ada.sav  model_gaussian.sav  model_lda_for_validation.sav  model_lda_label.sav  model_lda_ohe.sav  model_lgb.sav  model_lr.sav  model_randomforest.sav  model_xgb_label.sav  model_xgb_tuned.sav
models/scores_week1/: draft_score_naive.csv  draft_score_v1.csv  draft_score_v2.csv
models/scores_week_2/: scores_week2_draft.csv
models/scores_week_3/: scores_week3_draft_gbc.csv  scores_week3_draft_xgb.csv
models/scores_week_4/: ada.csv  lda_final_csv.csv  lightgbm.csv  (+17 more)
notebooks/: karki_ronik-24886412-week1_kaggle_logistic_regression.ipynb  karki_ronik-24886412-week2_kaggle_gradient_boosting.ipynb  karki_ronik-24886412-week2_kaggle_logistic_regression.ipynb  karki_ronik-24886412-week3-gradient_boosting.ipynb  karki_ronik-24886412-week3-xgb.ipynb  karki_ronik-24886412-week4_linear_discriminant_analysis.ipynb  requirements.txt
(+5 files in other folders)
