[tool.poetry]
name = "kaggle-assignments"
version = "0.1.0"
description = ""
authors = ["ronik <ronik.carkey@gmail.com>"]
readme = "README.md"
packages = [{include = "kaggle_assignments"}]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.0.3"
jupyterlab = "^4.0.5"
scikit-learn = "^1.3.0"
seaborn = "^0.12.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
