[tool.poetry]
name = "kaggle-assignments"
version = "0.1.0"
description = ""
authors = ["ronik <ronik.carkey@gmail.com>"]
readme = "README.md"
packages = [{include = "kaggle_assignments"}]

[tool.poetry.dependencies]
python = "3.9.13"
jupyterlab = "3.6.3"
scikit-learn = "1.2.2"
pandas = "2.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
